--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.29.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "node-sass": "^8.0.0",
-    "sass": "^1.60.0"
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
